--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>biofit-wellness-path</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>BioFit - Your Personal Wellness Path</title>
+    <meta name="description" content="Discover your personalized wellness journey with BioFit. Take our comprehensive health quiz and get tailored recommendations for your physical and mental well-being." />
+    <meta name="author" content="BioFit Team" />
 
-    <meta property="og:title" content="biofit-wellness-path" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="BioFit - Your Personal Wellness Path" />
+    <meta property="og:description" content="Discover your personalized wellness journey with BioFit. Take our comprehensive health quiz and get tailored recommendations for your physical and mental well-being." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/bio-fit-logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@biofit_wellness" />
+    <meta name="twitter:image" content="/bio-fit-logo.png" />
+
+    <link rel="icon" type="image/png" href="/icon.png" />
+     
   </head>
 
   <body>
